--- a/roles/openshift-apps/solr/templates/storage.yml
+++ b/roles/openshift-apps/solr/templates/storage.yml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: solr-storage
+  name: solr-storage{{ '-stg' if env == 'staging' else '' }}
 spec:
   accessModes:
     - ReadWriteOnce
