--- a/roles/openshift-apps/solr/templates/storage.yml
+++ b/roles/openshift-apps/solr/templates/storage.yml
@@ -5,7 +5,7 @@ metadata:
   name: solr-storage{{ '-stg' if env == 'staging' else '' }}
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 10Gi
