--- a/roles/batcave/tasks/main.yml
+++ b/roles/batcave/tasks/main.yml
@@ -27,6 +27,7 @@
   - srm                       # secure rm to delete sensitive files.
   - ansible                   # This is our ansible master, needs ansible installed.
   - ansible-openstack-modules # Needed to manage cloud with ansible
+  - ansible-collection-community-general # various useful community modules for ansible
   - yum-metadata-parser       # Needed for rhn sync
   - yum-rhn-plugin            # Needed for rhn sync
   - createrepo_c              # Needed for rhn sync
