openshift-apps: update coreos apps to use `main` branch name for builds

--- a/roles/openshift-apps/coreos-koji-tagger/templates/buildconfig.yml
+++ b/roles/openshift-apps/coreos-koji-tagger/templates/buildconfig.yml
@@ -13,7 +13,7 @@ spec:
       ref: fedora-infra-staging
       uri: https://github.com/coreos/fedora-coreos-releng-automation.git
 {% else %}
-      ref: master 
+      ref: main
       uri: https://github.com/coreos/fedora-coreos-releng-automation.git
 {% endif %}
   strategy:
