--- a/roles/openshift-apps/fedora-ostree-pruner/templates/buildconfig.yml
+++ b/roles/openshift-apps/fedora-ostree-pruner/templates/buildconfig.yml
@@ -13,7 +13,7 @@ spec:
       ref: fedora-infra-staging
       uri: https://github.com/coreos/fedora-coreos-releng-automation.git
 {% else %}
-      ref: master 
+      ref: main
       uri: https://github.com/coreos/fedora-coreos-releng-automation.git
 {% endif %}
   strategy:
