openvpn / server: make the ccd dir idempotent
Right now this task makes the ccd dir as 0755 and root.root, but then a
later task syncs this from batcave01 and it gets 2755 and
root.sysadmin-main. Just change this to match so we are more idempotent.

Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/openvpn/server/tasks/main.yml
+++ b/roles/openvpn/server/tasks/main.yml
@@ -12,9 +12,9 @@
 - name: Create the /etc/openvpn/server/ccd/ directory
   file: >
     dest=/etc/openvpn/server/ccd/
-    mode=0755
+    mode=2755
     owner=root
-    group=root
+    group=sysadmin-main
     state=directory
   tags:
   - openvpn
