bastion: bastion13 has to have vpn to enroll in ipa
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/playbooks/groups/bastion.yml
+++ b/playbooks/groups/bastion.yml
@@ -13,6 +13,7 @@
   roles:
   - base
   - rkhunter
+  - { role: openvpn/client, when: inventory_hostname == 'bastion13.fedoraproject.org' }
   - openvpn/server
   - ipa/client
   - nagios_client
