haproxy: disable notifs-web02 until it's ready
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/haproxy/templates/haproxy.cfg
+++ b/roles/haproxy/templates/haproxy.cfg
@@ -177,7 +177,7 @@ backend notifs-web-backend
     balance hdr(appserver)
     server  notifs-web01 notifs-web01:80 check inter 10s rise 1 fall 2
 {% if env == "production" %}
-    server  notifs-web02 notifs-web02:80 check inter 10s rise 1 fall 2
+#    server  notifs-web02 notifs-web02:80 check inter 10s rise 1 fall 2
 {% endif %}
     option  httpchk GET /notifications/_heartbeat
 
