--- a/roles/openshift-apps/bodhi/templates/dockerfile-base
+++ b/roles/openshift-apps/bodhi/templates/dockerfile-base
@@ -1,4 +1,8 @@
+{% if env == "staging" %}      
+FROM fedora:34
+{% else %}
 FROM fedora:32
+{% endif %}
 LABEL \
   name="bodhi-base" \
   vendor="Fedora Infrastructure" \
