debuginfod: tweak server configuration and proxy frontend
Codify a few debuginfod process parameters that appear to be working well.

Adjust incoming proxies to redirect the "/" URL to a wiki page, as
requested by FESCO.

--- a/playbooks/include/proxies-redirects.yml
+++ b/playbooks/include/proxies-redirects.yml
@@ -872,3 +872,10 @@
     website: qa.fedoraproject.org
     path: /
     target: https://fedoraproject.org/wiki/QA
+
+  # redirects for debuginfod main page
+  - role: httpd/redirect
+    shortname: debuginfod
+    website: debuginfod.fedoraproject.org
+    regex: /(index.html)?$
+    target: https://fedoraproject.org/wiki/Debuginfod
