--- a/playbooks/include/proxies-reverseproxy.yml
+++ b/playbooks/include/proxies-reverseproxy.yml
@@ -751,8 +751,17 @@
   - role: httpd/reverseproxy
     website: debuginfod.fedoraproject.org
     destname: debuginfod
-    remotepath: /
-    localpath: /
+    remotepath: /buildid/
+    localpath: /buildid/
+    proxyurl: http://debuginfod01:8002
+    proxyopts: "connectiontimeout=600 timeout=600 keepalive=on"
+    tags: debuginfod
+
+  - role: httpd/reverseproxy
+    website: debuginfod.fedoraproject.org
+    destname: debuginfod
+    remotepath: /metrics
+    localpath: /metrics
     proxyurl: http://debuginfod01:8002
     proxyopts: "connectiontimeout=600 timeout=600 keepalive=on"
     tags: debuginfod
