--- a/playbooks/groups/bodhi-backend.yml
+++ b/playbooks/groups/bodhi-backend.yml
@@ -32,7 +32,9 @@
   - ipa/client
   - sudo
   - rkhunter
-  - fedmsg/base
+
+  - role: fedmsg/base
+    when: env != 'staging'
 
   - role: nfs/client
     mnt_dir: '/mnt/fedora_koji'
