--- a/roles/copr/backend/tasks/resalloc.yml
+++ b/roles/copr/backend/tasks/resalloc.yml
@@ -1,3 +1,4 @@
+---
 - name: install packages needed by resalloc server
   dnf:
     state: present
@@ -31,20 +32,14 @@
   become: yes
   become_user: postgres
 
-- name: install .ansible.cfg for resalloc user
+- name: setup provision directory
+  include_tasks: setup_provisioning_environment.yml
+  vars:
+    provision_directory: /var/lib/resallocserver/provision
+
+- name: install .ansible.cfg for {{ provision_user }} user
   copy: src=ansible.cfg dest=/var/lib/resallocserver/.ansible.cfg
         owner=resalloc group=resalloc mode=600
-  tags:
-  - provision_config
-
-- name: resalloc, sync copr provisioning files
-  synchronize: src="provision/" dest="/var/lib/resallocserver/provision/"
-  tags:
-  - provision_config
-
-- name: "resalloc, sync copr provisioning files [remove mock config leftovers]"
-  synchronize: src="provision/files/mock/" dest="/var/lib/resallocserver/provision/files/mock/"
-               delete=yes
   tags:
   - provision_config
 
@@ -61,31 +56,6 @@
   - vm-aws-new
   - vm-aws-delete
   - vm-aws-check
-  tags:
-  - provision_config
-
-- name: resalloc, generate vars files
-  template:
-    src: "provision/{{ item }}"
-    dest: "/var/lib/resallocserver/provision/{{ item }}"
-  with_items:
-  - vars.yml
-  - nova_cloud_vars.yml
-  - aws_cloud_vars.yml
-  tags:
-  - provision_config
-
-- name: resalloc, rpmbuild config
-  template:
-    src: provision/copr-rpmbuild/main.ini.j2
-    dest: /var/lib/resallocserver/provision/files/main.ini
-  tags:
-  - provision_config
-
-- name: resalloc, rpkg config
-  template:
-    src: provision/rpkg.conf.j2
-    dest: /var/lib/resallocserver/provision/files/rpkg.conf
   tags:
   - provision_config
 
