--- a/roles/copr/backend/tasks/setup_provisioning_environment.yml
+++ b/roles/copr/backend/tasks/setup_provisioning_environment.yml
@@ -1,18 +1,18 @@
 ---
 - name: sync copr provisioning files
-  synchronize: src="provision/" dest="{{ provision_directory }}/"
+  synchronize: src="../files/provision/" dest="{{ provision_directory }}/"
   tags:
   - provision_config
 
 - name: "sync copr provisioning files [remove mock config leftovers]"
-  synchronize: src="provision/files/mock/" dest="{{ provision_directory }}/files/mock/"
+  synchronize: src="../files/provision/files/mock/" dest="{{ provision_directory }}/files/mock/"
                delete=yes
   tags:
   - provision_config
 
 - name: resalloc, generate vars files
   template:
-    src: "provision/{{ item }}"
+    src: "../files/provision/{{ item }}"
     dest: "{{ provision_directory }}/{{ item }}"
   with_items:
   - vars.yml
@@ -23,14 +23,14 @@
 
 - name: resalloc, rpmbuild config
   template:
-    src: provision/copr-rpmbuild/main.ini.j2
+    src: ../files/provision/copr-rpmbuild/main.ini.j2
     dest: "{{ provision_directory }}/files/main.ini"
   tags:
   - provision_config
 
 - name: resalloc, rpkg config
   template:
-    src: provision/rpkg.conf.j2
+    src: ../files/provision/rpkg.conf.j2
     dest: "{{ provision_directory }}/files/rpkg.conf"
   tags:
   - provision_config
