copr-be/copr-hv: some config vars are useless for copr-hv
Those config variables are used in vars files templates;  so instead of
defining fake/unused vars for copr-hv, rather don't generate those vars
files at all.

--- a/roles/copr/backend/tasks/setup_provisioning_environment.yml
+++ b/roles/copr/backend/tasks/setup_provisioning_environment.yml
@@ -14,27 +14,11 @@
   tags:
   - provision_config
 
-- name: resalloc, generate vars files
+- name: resalloc, generate vars.yml file
   template:
     src: "{{ roles_path }}/copr/backend/templates/provision/{{ item }}"
     dest: "{{ provision_directory }}/{{ item }}"
   with_items:
   - vars.yml
-  - nova_cloud_vars.yml
-  - aws_cloud_vars.yml
-  tags:
-  - provision_config
-
-- name: resalloc, rpmbuild config
-  template:
-    src: "{{ roles_path }}/copr/backend/templates/provision/copr-rpmbuild/main.ini.j2"
-    dest: "{{ provision_directory }}/files/main.ini"
-  tags:
-  - provision_config
-
-- name: resalloc, rpkg config
-  template:
-    src: "{{ roles_path }}/copr/backend/templates/provision/rpkg.conf.j2"
-    dest: "{{ provision_directory }}/files/rpkg.conf"
   tags:
   - provision_config
