copr-be/copr-hv: drop os-nova jinja filters
They are broken, and since we have no OpenStack now, also unused.

--- a/roles/copr/backend/tasks/setup_provisioning_environment.yml
+++ b/roles/copr/backend/tasks/setup_provisioning_environment.yml
@@ -46,3 +46,9 @@
             dest="{{ provision_directory }}/files/rpkg.conf"
   tags:
   - provision_config
+
+- name: remove currently unused and broken os_nova filter
+  file: state=absent
+        path="{{ provision_directory }}/filter_plugins/os_nova.py"
+  tags:
+  - provision_config
