FMN: only hotfix on 01
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/notifs/backend/tasks/main.yml
+++ b/roles/notifs/backend/tasks/main.yml
@@ -54,6 +54,8 @@
   - fmn_fasshim.py
   - tasks.py
   - util.py
+  when:
+    inventory_hostname.startswith('notifs-backend01')
   tags:
   - notifs
   - notifs/backend
