--- a/roles/ipa/server/tasks/scripts.yml
+++ b/roles/ipa/server/tasks/scripts.yml
@@ -39,7 +39,7 @@
     ipa_pass: "{{ipa_admin_password}}"
     validate_certs: no
   run_once: yes
-  delegate_to: ipa[0]
+  delegate_to: "ipa01{{ env_suffix }}.iad2.fedoraproject.org"
   tags:
   - ipa/server
   - config
@@ -52,7 +52,7 @@
     mode: 0755
   # Only run the cron job on one server
   run_once: yes
-  delegate_to: ipa[0]
+  delegate_to: "ipa01{{ env_suffix }}.iad2.fedoraproject.org"
   tags:
   - ipa/server
   - config
