add tags for debuginfod redirects too
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/playbooks/include/proxies-redirects.yml
+++ b/playbooks/include/proxies-redirects.yml
@@ -879,9 +879,13 @@
     website: debuginfod.fedoraproject.org
     regex: ^/$
     target: https://fedoraproject.org/wiki/Debuginfod
+    tags:
+    - debuginfod
 
   - role: httpd/redirect
     shortname: debuginfod
     website: debuginfod.fedoraproject.org
     regex: ^/index.html$
     target: https://fedoraproject.org/wiki/Debuginfod
+    tags:
+    - debuginfod
