debuginfod: balance redirect & reverse-proxy better
Our ansible default ansible scripts don't like multiple /suburls being
individually proxied, so we ended up losing /buildid/* and keeping
/metrics.

Switch to using single /-level reverse-proxying AND wiki-redirection
clauses, and use a new template .conf file to break the tie with a
"ProxyPass / !"  directive.

--- a/playbooks/include/proxies-redirects.yml
+++ b/playbooks/include/proxies-redirects.yml
@@ -873,7 +873,7 @@
     path: /
     target: https://fedoraproject.org/wiki/QA
 
-  # redirects for debuginfod main page
+  # redirects for debuginfod main page; subdirs are reverse-proxied
   - role: httpd/redirect
     shortname: debuginfod
     website: debuginfod.fedoraproject.org
@@ -881,11 +881,4 @@
     target: https://fedoraproject.org/wiki/Debuginfod
     tags:
     - debuginfod
-
-  - role: httpd/redirect
-    shortname: debuginfod
-    website: debuginfod.fedoraproject.org
-    regex: ^/index.html$
-    target: https://fedoraproject.org/wiki/Debuginfod
-    tags:
-    - debuginfod
+    
