debuginfod: tweak comment for redirect sample target

--- a/roles/httpd/reverseproxy/templates/reversepassproxy.debuginfod.conf
+++ b/roles/httpd/reverseproxy/templates/reversepassproxy.debuginfod.conf
@@ -7,6 +7,8 @@ ProxyPassReverse / {{proxyurl}}/
 ProxyPass / !
 
 # ... configure this redirect in playbooks/include/proxies-redirects.yml
+# Redirect permanent / https://fedoraproject.org/wiki/Debuginfod
+# (or e.g.,)
 # Redirect permanent / https://sourceware.org/elfutils/Debuginfod.html
 
 # test it with:
