debuginfod: add in a slash to make apache happy
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/roles/httpd/reverseproxy/templates/reversepassproxy.debuginfod.conf
+++ b/roles/httpd/reverseproxy/templates/reversepassproxy.debuginfod.conf
@@ -1,6 +1,6 @@
 
 # Broadly reverse-proxy
-ProxyPassMatch "^(.*)$" "{{proxyurl}}$1" {{proxyopts}}
+ProxyPassMatch "^(.*)$" "{{proxyurl}}/$1" {{proxyopts}}
 ProxyPassReverse / {{proxyurl}}/
 
 # ... but not the top level, which is instead redirected
