--- a/roles/copr/hypervisor/tasks/main.yml
+++ b/roles/copr/hypervisor/tasks/main.yml
@@ -155,6 +155,8 @@
     content: |
       EIMG_COPR_PLAYBOOK_DIR=/home/copr/provision
       EIMG_COPR_PLAYBOOK=local-image-update.yml
+      EIMG_FINAL_SYSPREP_ARGS=(--ssh-inject "root:file:$HOME/.ssh/id_rsa.pub"
+      --firstboot-command "restorecon -RvF /root" )
 
 - name: setup provision directory
   include_tasks: "{{ roles_path }}/copr/backend/tasks/setup_provisioning_environment.yml"
