copr-be/copr-hv: install libvirt-new script only on BE

--- a/roles/copr/backend/tasks/setup_provisioning_environment.yml
+++ b/roles/copr/backend/tasks/setup_provisioning_environment.yml
@@ -30,11 +30,22 @@
     mode: 0755
   with_items:
   - upload-qcow2-images
-  - libvirt-new
   tags:
   - provision_config
   when:
   - cloud_vars is not defined
+
+- name: templated provision scripts
+  template:
+    src: "{{ roles_path }}/copr/backend/templates/provision/{{ item }}"
+    dest: "{{ provision_directory }}/{{ item }}"
+    mode: 0755
+  with_items:
+  - libvirt-new
+  tags:
+  - provision_config
+  when:
+  - cloud_vars is defined and cloud_vars
 
 - name: generate cloud-oriented vars files
   template:
