--- a/roles/copr/hypervisor/tasks/main.yml
+++ b/roles/copr/hypervisor/tasks/main.yml
@@ -156,7 +156,7 @@
       EIMG_COPR_PLAYBOOK_DIR=/home/copr/provision
       EIMG_COPR_PLAYBOOK=local-image-update.yml
       EIMG_FINAL_SYSPREP_ARGS=(--ssh-inject "root:file:$HOME/.ssh/id_rsa.pub"
-      --firstboot-command "restorecon -RvF /root" )
+      --run-command "chcon -v -R -h system_u:object_r:ssh_home_t:s0 /root/.ssh" )
 
 - name: setup provision directory
   include_tasks: "{{ roles_path }}/copr/backend/tasks/setup_provisioning_environment.yml"
